# OB1-Self-Education

./: .env_example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
education/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
education/migrations/: 0001_initial.py  0002_initial.py  0003_alter_section_owner.py  0004_auto_20240716_1027.py  0005_remove_section_owner_section_owner.py  0006_testing_correct_answers.py  0007_alter_answer_question_alter_question_test.py  0008_alter_materials_section.py  0009_usertestprogress.py
fixtures/: auth_data.json  education_data.json  users_data.json
users/: models.py  permissions.py  serializers.py  tests.py  urls.py
users/management/commands/: csu.py  manager.py  test_users.py
users/migrations/: 0001_initial.py
